--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,12 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    // 컴파일러가 찾는 최초 모듈 위치
+    "baseUrl": ".",
+		"paths": {
+			"@src/*": ["src/*"],
+		}
   },
   "include": [
     "src"
