--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public"
+    
   },
   "eslintConfig": {
     "extends": [
@@ -63,6 +64,7 @@
     "@storybook/node-logger": "^6.3.7",
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.3.7",
+    "babel-plugin-module-resolver": "^4.1.0",
     "storybook-addon-styled-component-theme": "^2.0.0"
   }
 }
