--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/styled-components": "^5.1.13",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.1",
     "react-script": "^2.0.5",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
@@ -27,7 +28,6 @@
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public"
-    
   },
   "eslintConfig": {
     "extends": [
@@ -64,6 +64,7 @@
     "@storybook/node-logger": "^6.3.7",
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.3.7",
+    "@types/react-router-dom": "^5.1.8",
     "babel-plugin-module-resolver": "^4.1.0",
     "storybook-addon-styled-component-theme": "^2.0.0"
   }
