--- a/package.json
+++ b/package.json
@@ -10,12 +10,20 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.18",
     "@types/styled-components": "^5.1.13",
+    "axios": "^0.21.3",
+    "http-proxy-middleware": "^2.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.15.0",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.1",
     "react-script": "^2.0.5",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.1",
     "styled-tools": "^1.7.2",
     "typescript": "^4.4.2",
