--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-redux": "^7.1.18",
     "@types/styled-components": "^5.1.13",
     "axios": "^0.21.3",
+    "dotenv": "^10.0.0",
     "http-proxy-middleware": "^2.0.1",
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
